tests/requests/valid/014.http
GET /with_"quotes"?foo="bar" HTTP/1.1\r\n
\r\n